Make title search capability-aware
